[package]
name = "refresh-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.141"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.27.0", features = ["full"] }
